# ratingModelHostingPy

./: .gitignore  package.json  pyproject.toml  tailwind.config.js
backend/: AppNavigator.py  app.py  calculate_derived_scores.py  check_policy_rule.py  config.py  customer_financial_statement.py  dependencies.py  enums_and_constants.py  main.py  rating_model.py  rating_model_instance.py  rating_workflow_processing.py  rating_workflow_processing_2.py  run_tests.py  security.py  test_customers_selenium.py  test_formula_validation_circular_reference.py  test_formula_validation_syntax.py  test_login.py  test_rating_instance.py  test_statement.py  test_statement_sequencing.py  test_workflow_rules.py
backend/Template-Basic/: .~lock.CorporateModelDefinition-attributes.csv#  .~lock.fin_template.csv#  BS.csv  BS_wip.csv  CorporateModelDefinition-attributes.csv  CorporateModelDefinition.csv  fin_template.csv  stmtData.csv
backend/code for later/: formula_parser.py
backend/db/: database.py
backend/models/: base.py  models.py  policy_rules_model.py  rating_instance_model.py  rating_model_model.py  statement_models.py  workflow_model.py
backend/routes/: businessunits_routes.py  customer_routes.py  formula_dependency_tracker.py  formula_validator.py  fs_line_item_routes.py  policy_routes.py  rating_instance_routes.py  rating_model_config_routes.py  rating_model_factors_routes.py  rating_model_routes.py  rating_scale_routes.py  role_routes.py  statement_routes.py  templates_routes.py  work_flow_routes.py
backend/schema/: approval_tracking.py  schema.py
static/: output.css
(+72 files in other folders)
