[tool.poetry]
name = "ratingModelPython"  # Your actual project name
version = "0.1.0"
description = "Rating Model Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false  # Add this line to disable package mode warning

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
fastapi = "^0.112.2"
python-multipart = "^0.0.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.6.0"
SQLAlchemy = "^2.0.32"
uvicorn = "^0.30.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
python-docx = "^1.1.2"
reportlab = "^4.2.2"
Pillow = "^10.4.0"
py-expression-eval = "^0.3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"
pyinstrument = "^5.0.0"
fastapi-debug-toolbar = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"